crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_Legacy_`ParamSpec`_-_Validating_`ParamSpe…_(648be2a43987ffd8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - Legacy `ParamSpec` - Validating `ParamSpec` usage
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/paramspec.md
---

# Python source files

## library.py

```
1 | from typing import ParamSpec
2 | 
3 | LibraryP = ParamSpec("LibraryP")
```

## main.py

```
 1 | import library
 2 | from typing import Any, Final, ParamSpec, Callable, Concatenate, Protocol, Generic, Union, Optional, Annotated
 3 | 
 4 | P = ParamSpec("P")
 5 | Q = ParamSpec("Q")
 6 | 
 7 | class ValidProtocol(Protocol[P]):
 8 |     def method(self, c: Callable[P, int]) -> None: ...
 9 | 
10 | class ValidGeneric(Generic[P]):
11 |     def method(self, c: Callable[P, int]) -> None: ...
12 | 
13 | def valid(
14 |     a1: Callable[P, int],
15 |     a2: Callable[Concatenate[int, P], int],
16 |     a3: Callable["P", int],
17 |     a4: Callable[Concatenate[int, "P"], int],
18 |     a5: Callable[library.LibraryP, int],
19 |     a6: Callable["Concatenate[int, P]", int],
20 |     a7: Callable["library.LibraryP", int],
21 | ) -> None: ...
22 | def invalid(
23 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
24 |     a1: P,
25 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
26 |     a3: Callable[[P], int],
27 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
28 |     a4: Callable[..., P],
29 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
30 |     a5: Callable[Concatenate[P, ...], int],
31 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
32 |     a6: P | int,
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     a7: Union[P, int],
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     a8: Optional[P],
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     a9: Annotated[P, "metadata"],
39 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
40 |     a10: Callable["[int, str]", str],
41 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
42 |     a11: Callable["...", int],
43 | ) -> None: ...
44 | 
45 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
46 | def invalid_return() -> P:
47 |     raise NotImplementedError
48 | 
49 | def invalid_variable_annotation(y: Any) -> None:
50 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
51 |     x: P = y
52 | 
53 | def invalid_with_qualifier(y: Any) -> None:
54 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
55 |     x: Final[P] = y
56 | 
57 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
58 | def invalid_stringified_return() -> "P":
59 |     raise NotImplementedError
60 | 
61 | def invalid_stringified_annotation(
62 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
63 |     a: "P",
64 | ) -> None: ...
65 | def invalid_stringified_variable_annotation(y: Any) -> None:
66 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
67 |     x: "P" = y
68 | 
69 | class InvalidSpecializationTarget(Generic[P]):
70 |     attr: Callable[P, None]
71 | 
72 | def invalid_specialization(
73 |     # error: [invalid-type-form] "Bare ParamSpec `Q` is not valid in this context"
74 |     a: InvalidSpecializationTarget[[Q]],
75 |     # error: [invalid-type-form] "Bare ParamSpec `Q` is not valid in this context"
76 |     b: InvalidSpecializationTarget[Q,],
77 | ) -> None: ...
```

# Diagnostics

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:24:9
   |
22 | def invalid(
23 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
24 |     a1: P,
   |         ^
25 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
26 |     a3: Callable[[P], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:26:19
   |
24 |     a1: P,
25 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
26 |     a3: Callable[[P], int],
   |                   ^
27 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
28 |     a4: Callable[..., P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:28:23
   |
26 |     a3: Callable[[P], int],
27 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
28 |     a4: Callable[..., P],
   |                       ^
29 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
30 |     a5: Callable[Concatenate[P, ...], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:30:30
   |
28 |     a4: Callable[..., P],
29 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
30 |     a5: Callable[Concatenate[P, ...], int],
   |                              ^
31 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
32 |     a6: P | int,
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:32:9
   |
30 |     a5: Callable[Concatenate[P, ...], int],
31 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
32 |     a6: P | int,
   |         ^
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     a7: Union[P, int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:34:15
   |
32 |     a6: P | int,
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     a7: Union[P, int],
   |               ^
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     a8: Optional[P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:36:18
   |
34 |     a7: Union[P, int],
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     a8: Optional[P],
   |                  ^
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     a9: Annotated[P, "metadata"],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:38:19
   |
36 |     a8: Optional[P],
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     a9: Annotated[P, "metadata"],
   |                   ^
39 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
40 |     a10: Callable["[int, str]", str],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`
  --> src/main.py:40:19
   |
38 |     a9: Annotated[P, "metadata"],
39 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
40 |     a10: Callable["[int, str]", str],
   |                   ^^^^^^^^^^^^
41 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
42 |     a11: Callable["...", int],
   |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions

```

```
error[invalid-type-form]: The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`
  --> src/main.py:42:19
   |
40 |     a10: Callable["[int, str]", str],
41 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
42 |     a11: Callable["...", int],
   |                   ^^^^^
43 | ) -> None: ...
   |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:46:25
   |
45 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
46 | def invalid_return() -> P:
   |                         ^
47 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:51:8
   |
49 | def invalid_variable_annotation(y: Any) -> None:
50 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
51 |     x: P = y
   |        ^
52 |
53 | def invalid_with_qualifier(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:55:14
   |
53 | def invalid_with_qualifier(y: Any) -> None:
54 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
55 |     x: Final[P] = y
   |              ^
56 |
57 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:58:38
   |
57 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
58 | def invalid_stringified_return() -> "P":
   |                                      ^
59 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:63:9
   |
61 | def invalid_stringified_annotation(
62 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
63 |     a: "P",
   |         ^
64 | ) -> None: ...
65 | def invalid_stringified_variable_annotation(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:67:9
   |
65 | def invalid_stringified_variable_annotation(y: Any) -> None:
66 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
67 |     x: "P" = y
   |         ^
68 |
69 | class InvalidSpecializationTarget(Generic[P]):
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `Q` is not valid in this context in a type expression
  --> src/main.py:74:37
   |
72 | def invalid_specialization(
73 |     # error: [invalid-type-form] "Bare ParamSpec `Q` is not valid in this context"
74 |     a: InvalidSpecializationTarget[[Q]],
   |                                     ^
75 |     # error: [invalid-type-form] "Bare ParamSpec `Q` is not valid in this context"
76 |     b: InvalidSpecializationTarget[Q,],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```

```
error[invalid-type-form]: Bare ParamSpec `Q` is not valid in this context in a type expression
  --> src/main.py:76:36
   |
74 |     a: InvalidSpecializationTarget[[Q]],
75 |     # error: [invalid-type-form] "Bare ParamSpec `Q` is not valid in this context"
76 |     b: InvalidSpecializationTarget[Q,],
   |                                    ^
77 | ) -> None: ...
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```
